--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          username: FakeErrorX
+          username: ThaYTOfficial
           password: ${{ secrets.REGISTRY_TOKEN }}
       -
         name: Build and push
@@ -40,4 +40,4 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/fakeerrorx/ubuntu:latest
+            ghcr.io/thaytofficial/ubuntu:latest
